# this-is-me-trying

./: 2022-04-08-mediocre.py  2022-05-09-express-elevator.py  2022-05-09-longest-prime-ladder.py  2022-05-13-nonconformist-dice.py  2022_06_03_express_fun.py  2022_10_07_classic_socks.py  2022_10_07_express_clock.py  m_2022_05_20_express_ant.py  m_2022_05_20_express_ant_test.py  m_2022_06_24_classic_goat_elevators.py  m_2022_06_24_express_711.py  m_2023_10_28_speaker.py  m_2023_12_03_oligopoly.py  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
