[tool.poetry]
name = "riddler"
version = "0.1.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
numpy = "^1.22.3"
networkx = {extras = ["default"], version = "^2.8"}

[tool.poetry.dev-dependencies]
black = "^20.8b1"
pytest = "^6.2.2"
pylint = "^2.7.2"
mypy = "^0.812"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
